fix nortony theme. when menu li's run to 2nd line the content area is still visible. #3518

--- a/openscholar/themes/nortony/css/nortony.css
+++ b/openscholar/themes/nortony/css/nortony.css
@@ -196,7 +196,6 @@ body.header-main-right .region-header-second {
 #menu-bar {
   width: auto;
   background: url(../images/navbar.png) 0 0 repeat-x transparent;
-  height: 48px;
   padding: 0;
   }
   
